--- a/src/main/resources/templates/shopping-cart.html
+++ b/src/main/resources/templates/shopping-cart.html
@@ -10,17 +10,17 @@
 <body>
 <div layout:fragment="content">
 <h1>Shopping Cart</h1>
-<div th:if="${items == null or items.empty}">
+<div th:if="${cart.items == null or cart.items.empty}">
     Shopping Cart is Empty!
 </div>
-<div th:unless="${items == null or items.empty}">
+<div th:unless="${cart.items == null or cart.items.empty}">
     <br>
     <div class="item-count">
-        <span class="item-count-value" th:text="${session.cart.itemCount}"></span>
+        <span class="item-count-value" th:text="${cart.itemCount}"></span>
         <span class="item-count-label"> ITEM(S)</span>
     </div>
     <hr class="shopping-cart-hr">
-    <div th:id="'cart-item-' + ${item.book.id}" th:each="item : ${items}">
+    <div th:id="'cart-item-' + ${item.book.id}" th:each="item : ${cart.items}">
             <div class="row">
             <div class="cart-item-img col-xs-height col-xs-4 col-md-4 col-lg-3 col-top">
                 <img src="https://via.placeholder.com/155x200">
@@ -59,7 +59,7 @@
     </div>
     <div class="cart-total col-md-6">
         <span class="cart-total-label">TOTAL: $</span>
-        <span class="cart-total-value" th:text="${#numbers.formatDecimal(total,1,2)}"></span>
+        <span class="cart-total-value" th:text="${#numbers.formatDecimal(cart.getTotal(),1,2)}"></span>
     </div>
 
 </div>
